# inftools

./: README.md  pyproject.toml
.github/workflows/: biweekly.yml
examples/: co2.xyz
examples/infinit_double_well/: infretis.toml
inftools/: bin.py  calcs.py  check_data.py  concatenate.py  flow.py  get_interfaces.py  helper.py  initial_paths.py  recalculate_order.py
inftools/analysis/: Free_energy.py  Wham_Pcross.py  gromacs.py  infinit_helpers.py  wham.py
inftools/exercises/: puckering.py
inftools/misc/: data_helper.py  free_help.py  infinit_helper.py  tomlreader.py  xyz_help.py
inftools/plotting/: max_op.py
inftools/puckering_exercise/: puckering.py
inftools/tis_tools/: flow.py  recalculate_order.py
inftools/tistools/: calc_rate.py  calc_reaction_free_energy.py  check_data.py  combine_results.py  concatenate.py  fener_histo.py  flow.py  get_interfaces.py  initial_paths.py  max_op.py  path_weights.py  path_weigths.py  plot_ens.py  plot_msg.py  predictive_power.py  recalculate_order.py  recalculate_traj.py  traj_conv.py  trajtxt_conv.py
inftools/wham/: Wham_Pcross.py  wham.py
inftools/xyz/: center_xyz.py
test/data/path_xyz/: energy.txt  order.txt  traj.txt
test/simdata_dw/: infretis.toml  infretis_data.txt  restart.toml
test/test_analysis/: test_wham.py
test/test_combine_data/: test_combine_data.py
test/test_estimate_interfaces/: test_estimate_binless_interfaces.py
test/test_initial_paths/: test_initial_path_from_iretis.py
test/test_path_weights/: test_path_weights.py
test/test_tistools/: test_concatenate.py  test_infinit.py
(+125 files in other folders)
