[tool.poetry]
name = "inftools"
version = "0.1.0"
description = "Useful tools for AIRETIS simulations"
authors = [
    "Daniel Zhang <daniel.t.zhang@ntnu.no>",
    "Lukas Baldauf <lukas.baldauf@ntnu.no>",
    "Anders Lervik <andersle@gmail.com>",
    "Titus Sebastiaan van Erp <titus.van.erp@ntnu.no>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.scripts]
infretisanalyze = "inftools.bin:infretisanalyze"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

